[package]
name = "rust-gmp"
version = "0.5.1"
authors = [ "thestinger <danielmicay@gmail.com>", "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "Rust bindings for GMP"
repository = "https://github.com/ZenGo-X/rust-gmp"
documentation = "https://docs.rs/rust-gmp-kzen"
license = "MIT"
keywords = [ "gmp", "multi", "precision", "arithmetic", "bignum" ]

[lib]
name = "gmp"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[features]
default = []

# Feature for enabling de/serialization of Mpz
serde_support = ["serde"]

[dependencies]
libc = {version = "~0.2", git="https://github.com/mesalock-linux/libc-sgx.git"}
num-traits = { version = "0.2", git = "https://github.com/mesalock-linux/num-traits-sgx.git" }
serde = { version = "1.0", optional = true, features = ["derive"], git = "https://github.com/mesalock-linux/serde-sgx.git" }

[dev-dependencies]
serde_json = { version = "1.0", git="https://github.com/mesalock-linux/serde-json-sgx.git" }
